modify :: response type